fix site sub title alignment on small screens

--- a/wp-content/themes/toolbox/style.scss
+++ b/wp-content/themes/toolbox/style.scss
@@ -395,6 +395,7 @@ body {
 		}
 		em {
 			display: block;
+			margin-left: 0;
 		}
 	}
 	.deecd-logo {
